# QtCommunicationClass

./: CMakeLists.txt  Doxyfile  README.MD  annotated.html  classMainWindow-members.html  classMainWindow.html  classconfig-members.html  classconfig.html  classes.html  config.cpp  config_8cpp.html  config_8h.html  config_8h_source.html  dir_b4711d83386d0b9777496091bfe99211.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  mainwindow.h  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  namespaceUi.html  namespaces.html
.github/workflows/: cmake.yml  main.yml  qttest.yml
QtCommunicationClasses/: QtCommunicationClasses.pro  chatserver.cpp  chatserver.h  config.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  websocket.cpp  websocket.h
QtCommunicationClasses/doxygen/: Doxyfile
docs/html/: annotated.html  class_main_window-members.html  class_main_window.html  classconfig-members.html  classconfig.html  config_8h.html  config_8h_source.html  functions_func.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  namespaces.html  (+2 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
(+63 files in other folders)
